<resources>
    <string name="app_name">338_Project2</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="login_loginPage">LOGIN</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_login_button">LOGIN</string>
    <string name="grade_assignment_tracker">Grade / Assignment Tracker</string>
    <string name="create_acc">Create an Account</string>
    <string name="re_enter_password">Re-Enter Password:</string>
    <string name="create_account">Create Account</string>
    <string name="student">Student</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="create_username">Create Username</string>
    <string name="create_password">Create Password</string>
    <string name="re_enter_password_hint">Re-Enter Password</string>
    <string name="teacher">Teacher</string>
    <string name="add_a_class">Add a Class</string>
    <string name="class_name">Class Name</string>
    <string name="grade">Grade</string>
    <string name="enter_class_name">Enter Class Name</string>
    <string name="aenter_class_grade">Enter Class Grade</string>
    <string name="add_class">Add Class</string>
    <string name="delete_a_user" />
    <string name="s">Delete a User</string>
    <string name="edit_a_user">Edit a User</string>
    <string name="back">Back</string>
    <string name="create_passwords">Create Password</string>
    <string name="vf">Re-enter Password</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_password">Edit Password</string>
    <string name="update_user">Update User</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_classes">View Classes</string>
    <string name="create_an_accounts">Create an Account</string>
    <string name="updated_class_name">Updated Class Name</string>
    <string name="update_class">Update Class</string>
    <string name="your_assignments">Your Assignments</string>
    <string name="add_an_assignment">Add an Assignment</string>
    <string name="add_an_assignments">Add an Assignment</string>
    <string name="assignment">Assignment</string>
    <string name="due_date">Due Date</string>
    <string name="enter_assignment_name">Enter Assignment Name</string>
    <string name="enter_due_date">Enter Due Date</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="update_an_assignment">Update an Assignment</string>
    <string name="updated_assignment_name">Updated Assignment Name</string>
    <string name="updated_due_date">Updated Due Date</string>
    <string name="update_assignment">Update Assignment</string>
</resources>